Update video link; Fix the links and buttons cursor; Fix the testimonials aligment on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@
     color: var(--text-primary);
     font-weight: 600;
   }
+
+  button,
+  a {
+    cursor: pointer;
+  }
 }
 
 @layer components {
